Fixed tab bar spacing in Safari.

--- a/assets/css/match_sched.css
+++ b/assets/css/match_sched.css
@@ -73,7 +73,12 @@ ul a {
     width: 100%;
 
     /* flexbox to make the list seem prettier */
-    display: flex;
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */
+    display: -webkit-flex;     /* NEW - Chrome */
+    display: flex;     
+    -webkit-justify-content: space-between;
     justify-content: space-between;
 }
 
